[gd_scene load_steps=9 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/third_party/fonts/kenvector_future.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 3
outline_color = Color( 0.972549, 0.698039, 0.0431373, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 3
outline_color = Color( 0.972549, 0.698039, 0.0431373, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 80
outline_size = 3
outline_color = Color( 0.317647, 0.882353, 0.133333, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 80
outline_size = 3
outline_color = Color( 0.972549, 0.411765, 0.0431373, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 80
outline_size = 3
outline_color = Color( 0.0431373, 0.494118, 0.972549, 1 )
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="GameScreen" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="RemainingToKill" type="Label" parent="Control/GameScreen"]
anchor_right = 1.0
margin_left = 48.0
margin_top = 24.0
margin_right = 209.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 1 )
text = "500"

[node name="Time" type="Label" parent="Control/GameScreen"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -114.0
custom_fonts/font = SubResource( 2 )
text = "30"

[node name="GameOver" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WinMessage" type="Label" parent="Control/GameOver"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -45.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 3 )
text = "You win!"
align = 1

[node name="LoseMessage" type="Label" parent="Control/GameOver"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -45.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
text = "You Lose!"
align = 1

[node name="PlayAgain" type="Button" parent="Control/GameOver"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -296.0
margin_top = -78.0
margin_right = 296.0
custom_fonts/font = SubResource( 6 )
text = "Play again"
flat = true

[node name="StartScreen" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GetReadyMessage" type="Label" parent="Control/StartScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -45.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 5 )
text = "GET READY!"
align = 1

[connection signal="pressed" from="Control/GameOver/PlayAgain" to="." method="_on_PlayAgain_pressed"]
